--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">PersonalFinance</string>
+    <string name="app_name">Looma</string>
     <string name="asset_forecasts_title">Previsioni Patrimonio</string>
+    <string name="no_data">Non ci sono previsioni</string>
     <string name="january">Gennaio</string>
     <string name="february">Febbraio</string>
     <string name="march">Marzo</string>
