--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="november">Novembre</string>
     <string name="december">Dicembre</string>
     <string name="expand">Espandi</string>
+    <string name="back">Indietro</string>
 </resources>
